# Solitaire

./: .gitignore  CMakeLists.txt  Card.cpp  Card.h  CardDefinitions.h  Column.cpp  Column.h  Deck.cpp  Deck.h  Game.cpp  Game.h  Hand.cpp  Hand.h  Point.h  README.md  SpriteLoader.cpp  SpriteLoader.h  Stack.cpp  State.cpp  State.h  classes.fwd  main.cpp
src/: CMakeLists.txt  Card.cpp  Card.h  Column.h  Deck.cpp  Deck.h  SpriteLoader.cpp  Stack.cpp  Stack.h  State.h  classes.fwd  main.cpp
test/: CMakeLists.txt  CardMock.h  CardTests.cpp  ColumnTest.cpp  SanityCheck.cpp  StackTest.cpp
